src/quack.output
Grammar

    0 $accept: pgm $end

    1 pgm: classes statements

    2 classes: classes clazz
    3        | %empty

    4 clazz: CLASS ident '(' formal_args ')' '{' statements methods '}'
    5      | CLASS ident '(' formal_args ')' EXTENDS ident '{' statements methods '}'

    6 methods: methods method
    7        | %empty

    8 method: DEF ident '(' formal_args ')' ':' ident statement_block
    9       | DEF ident '(' formal_args ')' statement_block

   10 formal_args: formal_args_delim
   11            | %empty

   12 formal_args_delim: formal_args_delim ',' formal_arg
   13                  | formal_arg

   14 formal_arg: ident ':' ident

   15 statements: statements statement
   16           | %empty

   17 statement_block: '{' statements '}'

   18 statement: IF expr statement_block opt_elif_parts

   19 opt_elif_parts: ELIF expr statement_block opt_elif_parts
   20               | ELSE statement_block
   21               | %empty

   22 statement: WHILE expr statement_block
   23          | l_expr '=' expr ';'
   24          | l_expr ':' ident '=' expr ';'
   25          | expr ';'

   26 l_expr: IDENT
   27       | expr '.' IDENT

   28 expr: l_expr
   29     | STRING_LIT
   30     | INT_LIT
   31     | '(' expr ')'
   32     | expr '*' expr
   33     | expr '/' expr
   34     | expr '+' expr
   35     | expr '-' expr
   36     | '-' expr
   37     | expr EQUALS expr
   38     | expr ATMOST expr
   39     | expr '<' expr
   40     | expr ATLEAST expr
   41     | expr '>' expr
   42     | expr AND expr
   43     | expr OR expr
   44     | NOT expr
   45     | expr '.' ident '(' actual_args ')'

   46 actual_args: %empty
   47            | actual_args_nonempty

   48 actual_args_nonempty: actual_args_nonempty ',' expr
   49                     | expr

   50 statement: return_expr

   51 return_expr: RETURN expr ';'
   52            | RETURN ';'

   53 statement: typecase

   54 typecase: TYPECASE expr '{' type_alternatives '}'

   55 type_alternatives: type_alternatives type_alternative
   56                  | %empty

   57 type_alternative: ident ':' ident statement_block

   58 expr: ident '(' actual_args ')'

   59 ident: IDENT


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 4 5 8 9 31 45 58
    ')' (41) 4 5 8 9 31 45 58
    '*' (42) 32
    '+' (43) 34
    ',' (44) 12 48
    '-' (45) 35 36
    '.' (46) 27 45
    '/' (47) 33
    ':' (58) 8 14 24 57
    ';' (59) 23 24 25 51 52
    '<' (60) 39
    '=' (61) 23 24
    '>' (62) 41
    '{' (123) 4 5 17 54
    '}' (125) 4 5 17 54
    error (256)
    CLASS (258) 4 5
    DEF (259) 8 9
    EXTENDS (260) 5
    IF (261) 18
    ELIF (262) 19
    ELSE (263) 20
    WHILE (264) 22
    RETURN (265) 51 52
    TYPECASE (266) 54
    ATLEAST (267) 40
    ATMOST (268) 38
    EQUALS (269) 37
    AND (270) 42
    OR (271) 43
    NOT (272) 44
    IDENT <str> (273) 26 27 59
    INT_LIT <num> (274) 30
    STRING_LIT <str> (275) 29
    NEG (276)


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    pgm <node> (38)
        on left: 1
        on right: 0
    classes <classes> (39)
        on left: 2 3
        on right: 1 2
    clazz <clazz> (40)
        on left: 4 5
        on right: 2
    methods <methods> (41)
        on left: 6 7
        on right: 4 5 6
    method <method> (42)
        on left: 8 9
        on right: 6
    formal_args <formals> (43)
        on left: 10 11
        on right: 4 5 8 9
    formal_args_delim <formals> (44)
        on left: 12 13
        on right: 10 12
    formal_arg <formal> (45)
        on left: 14
        on right: 12 13
    statements <block> (46)
        on left: 15 16
        on right: 1 4 5 15 17
    statement_block <block> (47)
        on left: 17
        on right: 8 9 18 19 20 22 57
    statement <statement> (48)
        on left: 18 22 23 24 25 50 53
        on right: 15
    opt_elif_parts <block> (49)
        on left: 19 20 21
        on right: 18 19
    l_expr <l_expr> (50)
        on left: 26 27
        on right: 23 24 28
    expr <expr> (51)
        on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 58
        on right: 18 19 22 23 24 25 27 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 48 49 51 54
    actual_args <actuals> (52)
        on left: 46 47
        on right: 45 58
    actual_args_nonempty <actuals> (53)
        on left: 48 49
        on right: 47 48
    return_expr <return_expr> (54)
        on left: 51 52
        on right: 50
    typecase <typecase> (55)
        on left: 54
        on right: 53
    type_alternatives <type_alternatives> (56)
        on left: 55 56
        on right: 54 55
    type_alternative <type_alternative> (57)
        on left: 57
        on right: 55
    ident <ident> (58)
        on left: 59
        on right: 4 5 8 9 14 24 45 57 58


State 0

    0 $accept: . pgm $end
    1 pgm: . classes statements
    2 classes: . classes clazz
    3        | . %empty

    $default  reduce using rule 3 (classes)

    pgm      go to state 1
    classes  go to state 2


State 1

    0 $accept: pgm . $end

    $end  shift, and go to state 3


State 2

    1 pgm: classes . statements
    2 classes: classes . clazz
    4 clazz: . CLASS ident '(' formal_args ')' '{' statements methods '}'
    5      | . CLASS ident '(' formal_args ')' EXTENDS ident '{' statements methods '}'
   15 statements: . statements statement
   16           | . %empty  [$end, IF, WHILE, RETURN, TYPECASE, NOT, IDENT, INT_LIT, STRING_LIT, '-', '(']

    CLASS  shift, and go to state 4

    $default  reduce using rule 16 (statements)

    clazz       go to state 5
    statements  go to state 6


State 3

    0 $accept: pgm $end .

    $default  accept


State 4

    4 clazz: CLASS . ident '(' formal_args ')' '{' statements methods '}'
    5      | CLASS . ident '(' formal_args ')' EXTENDS ident '{' statements methods '}'
   59 ident: . IDENT

    IDENT  shift, and go to state 7

    ident  go to state 8


State 5

    2 classes: classes clazz .

    $default  reduce using rule 2 (classes)


State 6

    1 pgm: classes statements .  [$end]
   15 statements: statements . statement
   18 statement: . IF expr statement_block opt_elif_parts
   22          | . WHILE expr statement_block
   23          | . l_expr '=' expr ';'
   24          | . l_expr ':' ident '=' expr ';'
   25          | . expr ';'
   26 l_expr: . IDENT
   27       | . expr '.' IDENT
   28 expr: . l_expr
   29     | . STRING_LIT
   30     | . INT_LIT
   31     | . '(' expr ')'
   32     | . expr '*' expr
   33     | . expr '/' expr
   34     | . expr '+' expr
   35     | . expr '-' expr
   36     | . '-' expr
   37     | . expr EQUALS expr
   38     | . expr ATMOST expr
   39     | . expr '<' expr
   40     | . expr ATLEAST expr
   41     | . expr '>' expr
   42     | . expr AND expr
   43     | . expr OR expr
   44     | . NOT expr
   45     | . expr '.' ident '(' actual_args ')'
   50 statement: . return_expr
   51 return_expr: . RETURN expr ';'
   52            | . RETURN ';'
   53 statement: . typecase
   54 typecase: . TYPECASE expr '{' type_alternatives '}'
   58 expr: . ident '(' actual_args ')'
   59 ident: . IDENT

    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    RETURN      shift, and go to state 11
    TYPECASE    shift, and go to state 12
    NOT         shift, and go to state 13
    IDENT       shift, and go to state 14
    INT_LIT     shift, and go to state 15
    STRING_LIT  shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18

    $default  reduce using rule 1 (pgm)

    statement    go to state 19
    l_expr       go to state 20
    expr         go to state 21
    return_expr  go to state 22
    typecase     go to state 23
    ident        go to state 24


State 7

   59 ident: IDENT .

    $default  reduce using rule 59 (ident)


State 8

    4 clazz: CLASS ident . '(' formal_args ')' '{' statements methods '}'
    5      | CLASS ident . '(' formal_args ')' EXTENDS ident '{' statements methods '}'

    '('  shift, and go to state 25


State 9

   18 statement: IF . expr statement_block opt_elif_parts
   26 l_expr: . IDENT
   27       | . expr '.' IDENT
   28 expr: . l_expr
   29     | . STRING_LIT
   30     | . INT_LIT
   31     | . '(' expr ')'
   32     | . expr '*' expr
   33     | . expr '/' expr
   34     | . expr '+' expr
   35     | . expr '-' expr
   36     | . '-' expr
   37     | . expr EQUALS expr
   38     | . expr ATMOST expr
   39     | . expr '<' expr
   40     | . expr ATLEAST expr
   41     | . expr '>' expr
   42     | . expr AND expr
   43     | . expr OR expr
   44     | . NOT expr
   45     | . expr '.' ident '(' actual_args ')'
   58     | . ident '(' actual_args ')'
   59 ident: . IDENT

    NOT         shift, and go to state 13
    IDENT       shift, and go to state 14
    INT_LIT     shift, and go to state 15
    STRING_LIT  shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18

    l_expr  go to state 26
    expr    go to state 27
    ident   go to state 24


State 10

   22 statement: WHILE . expr statement_block
   26 l_expr: . IDENT
   27       | . expr '.' IDENT
   28 expr: . l_expr
   29     | . STRING_LIT
   30     | . INT_LIT
   31     | . '(' expr ')'
   32     | . expr '*' expr
   33     | . expr '/' expr
   34     | . expr '+' expr
   35     | . expr '-' expr
   36     | . '-' expr
   37     | . expr EQUALS expr
   38     | . expr ATMOST expr
   39     | . expr '<' expr
   40     | . expr ATLEAST expr
   41     | . expr '>' expr
   42     | . expr AND expr
   43     | . expr OR expr
   44     | . NOT expr
   45     | . expr '.' ident '(' actual_args ')'
   58     | . ident '(' actual_args ')'
   59 ident: . IDENT

    NOT         shift, and go to state 13
    IDENT       shift, and go to state 14
    INT_LIT     shift, and go to state 15
    STRING_LIT  shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18

    l_expr  go to state 26
    expr    go to state 28
    ident   go to state 24


State 11

   26 l_expr: . IDENT
   27       | . expr '.' IDENT
   28 expr: . l_expr
   29     | . STRING_LIT
   30     | . INT_LIT
   31     | . '(' expr ')'
   32     | . expr '*' expr
   33     | . expr '/' expr
   34     | . expr '+' expr
   35     | . expr '-' expr
   36     | . '-' expr
   37     | . expr EQUALS expr
   38     | . expr ATMOST expr
   39     | . expr '<' expr
   40     | . expr ATLEAST expr
   41     | . expr '>' expr
   42     | . expr AND expr
   43     | . expr OR expr
   44     | . NOT expr
   45     | . expr '.' ident '(' actual_args ')'
   51 return_expr: RETURN . expr ';'
   52            | RETURN . ';'
   58 expr: . ident '(' actual_args ')'
   59 ident: . IDENT

    NOT         shift, and go to state 13
    IDENT       shift, and go to state 14
    INT_LIT     shift, and go to state 15
    STRING_LIT  shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18
    ';'         shift, and go to state 29

    l_expr  go to state 26
    expr    go to state 30
    ident   go to state 24


State 12

   26 l_expr: . IDENT
   27       | . expr '.' IDENT
   28 expr: . l_expr
   29     | . STRING_LIT
   30     | . INT_LIT
   31     | . '(' expr ')'
   32     | . expr '*' expr
   33     | . expr '/' expr
   34     | . expr '+' expr
   35     | . expr '-' expr
   36     | . '-' expr
   37     | . expr EQUALS expr
   38     | . expr ATMOST expr
   39     | . expr '<' expr
   40     | . expr ATLEAST expr
   41     | . expr '>' expr
   42     | . expr AND expr
   43     | . expr OR expr
   44     | . NOT expr
   45     | . expr '.' ident '(' actual_args ')'
   54 typecase: TYPECASE . expr '{' type_alternatives '}'
   58 expr: . ident '(' actual_args ')'
   59 ident: . IDENT

    NOT         shift, and go to state 13
    IDENT       shift, and go to state 14
    INT_LIT     shift, and go to state 15
    STRING_LIT  shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18

    l_expr  go to state 26
    expr    go to state 31
    ident   go to state 24


State 13

   26 l_expr: . IDENT
   27       | . expr '.' IDENT
   28 expr: . l_expr
   29     | . STRING_LIT
   30     | . INT_LIT
   31     | . '(' expr ')'
   32     | . expr '*' expr
   33     | . expr '/' expr
   34     | . expr '+' expr
   35     | . expr '-' expr
   36     | . '-' expr
   37     | . expr EQUALS expr
   38     | . expr ATMOST expr
   39     | . expr '<' expr
   40     | . expr ATLEAST expr
   41     | . expr '>' expr
   42     | . expr AND expr
   43     | . expr OR expr
   44     | . NOT expr
   44     | NOT . expr
   45     | . expr '.' ident '(' actual_args ')'
   58     | . ident '(' actual_args ')'
   59 ident: . IDENT

    NOT         shift, and go to state 13
    IDENT       shift, and go to state 14
    INT_LIT     shift, and go to state 15
    STRING_LIT  shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18

    l_expr  go to state 26
    expr    go to state 32
    ident   go to state 24


State 14

   26 l_expr: IDENT .  [ATLEAST, ATMOST, EQUALS, AND, OR, '>', '<', '+', '-', '*', '/', '.', ')', '{', ':', ',', '=', ';']
   59 ident: IDENT .  ['(']

    '('       reduce using rule 59 (ident)
    $default  reduce using rule 26 (l_expr)


State 15

   30 expr: INT_LIT .

    $default  reduce using rule 30 (expr)


State 16

   29 expr: STRING_LIT .

    $default  reduce using rule 29 (expr)


State 17

   26 l_expr: . IDENT
   27       | . expr '.' IDENT
   28 expr: . l_expr
   29     | . STRING_LIT
   30     | . INT_LIT
   31     | . '(' expr ')'
   32     | . expr '*' expr
   33     | . expr '/' expr
   34     | . expr '+' expr
   35     | . expr '-' expr
   36     | . '-' expr
   36     | '-' . expr
   37     | . expr EQUALS expr
   38     | . expr ATMOST expr
   39     | . expr '<' expr
   40     | . expr ATLEAST expr
   41     | . expr '>' expr
   42     | . expr AND expr
   43     | . expr OR expr
   44     | . NOT expr
   45     | . expr '.' ident '(' actual_args ')'
   58     | . ident '(' actual_args ')'
   59 ident: . IDENT

    NOT         shift, and go to state 13
    IDENT       shift, and go to state 14
    INT_LIT     shift, and go to state 15
    STRING_LIT  shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18

    l_expr  go to state 26
    expr    go to state 33
    ident   go to state 24


State 18

   26 l_expr: . IDENT
   27       | . expr '.' IDENT
   28 expr: . l_expr
   29     | . STRING_LIT
   30     | . INT_LIT
   31     | . '(' expr ')'
   31     | '(' . expr ')'
   32     | . expr '*' expr
   33     | . expr '/' expr
   34     | . expr '+' expr
   35     | . expr '-' expr
   36     | . '-' expr
   37     | . expr EQUALS expr
   38     | . expr ATMOST expr
   39     | . expr '<' expr
   40     | . expr ATLEAST expr
   41     | . expr '>' expr
   42     | . expr AND expr
   43     | . expr OR expr
   44     | . NOT expr
   45     | . expr '.' ident '(' actual_args ')'
   58     | . ident '(' actual_args ')'
   59 ident: . IDENT

    NOT         shift, and go to state 13
    IDENT       shift, and go to state 14
    INT_LIT     shift, and go to state 15
    STRING_LIT  shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18

    l_expr  go to state 26
    expr    go to state 34
    ident   go to state 24


State 19

   15 statements: statements statement .

    $default  reduce using rule 15 (statements)


State 20

   23 statement: l_expr . '=' expr ';'
   24          | l_expr . ':' ident '=' expr ';'
   28 expr: l_expr .  [ATLEAST, ATMOST, EQUALS, AND, OR, '>', '<', '+', '-', '*', '/', '.', ';']

    ':'  shift, and go to state 35
    '='  shift, and go to state 36

    $default  reduce using rule 28 (expr)


State 21

   25 statement: expr . ';'
   27 l_expr: expr . '.' IDENT
   32 expr: expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '+' expr
   35     | expr . '-' expr
   37     | expr . EQUALS expr
   38     | expr . ATMOST expr
   39     | expr . '<' expr
   40     | expr . ATLEAST expr
   41     | expr . '>' expr
   42     | expr . AND expr
   43     | expr . OR expr
   45     | expr . '.' ident '(' actual_args ')'

    ATLEAST  shift, and go to state 37
    ATMOST   shift, and go to state 38
    EQUALS   shift, and go to state 39
    AND      shift, and go to state 40
    OR       shift, and go to state 41
    '>'      shift, and go to state 42
    '<'      shift, and go to state 43
    '+'      shift, and go to state 44
    '-'      shift, and go to state 45
    '*'      shift, and go to state 46
    '/'      shift, and go to state 47
    '.'      shift, and go to state 48
    ';'      shift, and go to state 49


State 22

   50 statement: return_expr .

    $default  reduce using rule 50 (statement)


State 23

   53 statement: typecase .

    $default  reduce using rule 53 (statement)


State 24

   58 expr: ident . '(' actual_args ')'

    '('  shift, and go to state 50


State 25

    4 clazz: CLASS ident '(' . formal_args ')' '{' statements methods '}'
    5      | CLASS ident '(' . formal_args ')' EXTENDS ident '{' statements methods '}'
   10 formal_args: . formal_args_delim
   11            | . %empty  [')']
   12 formal_args_delim: . formal_args_delim ',' formal_arg
   13                  | . formal_arg
   14 formal_arg: . ident ':' ident
   59 ident: . IDENT

    IDENT  shift, and go to state 7

    $default  reduce using rule 11 (formal_args)

    formal_args        go to state 51
    formal_args_delim  go to state 52
    formal_arg         go to state 53
    ident              go to state 54


State 26

   28 expr: l_expr .

    $default  reduce using rule 28 (expr)


State 27

   17 statement_block: . '{' statements '}'
   18 statement: IF expr . statement_block opt_elif_parts
   27 l_expr: expr . '.' IDENT
   32 expr: expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '+' expr
   35     | expr . '-' expr
   37     | expr . EQUALS expr
   38     | expr . ATMOST expr
   39     | expr . '<' expr
   40     | expr . ATLEAST expr
   41     | expr . '>' expr
   42     | expr . AND expr
   43     | expr . OR expr
   45     | expr . '.' ident '(' actual_args ')'

    ATLEAST  shift, and go to state 37
    ATMOST   shift, and go to state 38
    EQUALS   shift, and go to state 39
    AND      shift, and go to state 40
    OR       shift, and go to state 41
    '>'      shift, and go to state 42
    '<'      shift, and go to state 43
    '+'      shift, and go to state 44
    '-'      shift, and go to state 45
    '*'      shift, and go to state 46
    '/'      shift, and go to state 47
    '.'      shift, and go to state 48
    '{'      shift, and go to state 55

    statement_block  go to state 56


State 28

   17 statement_block: . '{' statements '}'
   22 statement: WHILE expr . statement_block
   27 l_expr: expr . '.' IDENT
   32 expr: expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '+' expr
   35     | expr . '-' expr
   37     | expr . EQUALS expr
   38     | expr . ATMOST expr
   39     | expr . '<' expr
   40     | expr . ATLEAST expr
   41     | expr . '>' expr
   42     | expr . AND expr
   43     | expr . OR expr
   45     | expr . '.' ident '(' actual_args ')'

    ATLEAST  shift, and go to state 37
    ATMOST   shift, and go to state 38
    EQUALS   shift, and go to state 39
    AND      shift, and go to state 40
    OR       shift, and go to state 41
    '>'      shift, and go to state 42
    '<'      shift, and go to state 43
    '+'      shift, and go to state 44
    '-'      shift, and go to state 45
    '*'      shift, and go to state 46
    '/'      shift, and go to state 47
    '.'      shift, and go to state 48
    '{'      shift, and go to state 55

    statement_block  go to state 57


State 29

   52 return_expr: RETURN ';' .

    $default  reduce using rule 52 (return_expr)


State 30

   27 l_expr: expr . '.' IDENT
   32 expr: expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '+' expr
   35     | expr . '-' expr
   37     | expr . EQUALS expr
   38     | expr . ATMOST expr
   39     | expr . '<' expr
   40     | expr . ATLEAST expr
   41     | expr . '>' expr
   42     | expr . AND expr
   43     | expr . OR expr
   45     | expr . '.' ident '(' actual_args ')'
   51 return_expr: RETURN expr . ';'

    ATLEAST  shift, and go to state 37
    ATMOST   shift, and go to state 38
    EQUALS   shift, and go to state 39
    AND      shift, and go to state 40
    OR       shift, and go to state 41
    '>'      shift, and go to state 42
    '<'      shift, and go to state 43
    '+'      shift, and go to state 44
    '-'      shift, and go to state 45
    '*'      shift, and go to state 46
    '/'      shift, and go to state 47
    '.'      shift, and go to state 48
    ';'      shift, and go to state 58


State 31

   27 l_expr: expr . '.' IDENT
   32 expr: expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '+' expr
   35     | expr . '-' expr
   37     | expr . EQUALS expr
   38     | expr . ATMOST expr
   39     | expr . '<' expr
   40     | expr . ATLEAST expr
   41     | expr . '>' expr
   42     | expr . AND expr
   43     | expr . OR expr
   45     | expr . '.' ident '(' actual_args ')'
   54 typecase: TYPECASE expr . '{' type_alternatives '}'

    ATLEAST  shift, and go to state 37
    ATMOST   shift, and go to state 38
    EQUALS   shift, and go to state 39
    AND      shift, and go to state 40
    OR       shift, and go to state 41
    '>'      shift, and go to state 42
    '<'      shift, and go to state 43
    '+'      shift, and go to state 44
    '-'      shift, and go to state 45
    '*'      shift, and go to state 46
    '/'      shift, and go to state 47
    '.'      shift, and go to state 48
    '{'      shift, and go to state 59


State 32
